# r_tiny_render

./: .gitignore  Cargo.toml  README.md  READMEEN.md  canvas.html  index.html  test  test.text
assets/assistrobot/: license.txt
crates/loader/: Cargo.toml
crates/loader/src/: gltf.rs  lib.rs
crates/math/: cargo.toml
crates/math/src/: math.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: bind_group.rs  format.rs  renderer.rs  shader.rs  shader_buildin_function.rs
crates/render/: Cargo.toml
crates/render/src/: camera.rs  color.rs  lib.rs  light.rs  material.rs  mesh.rs  transform.rs
crates/render/src/shader/: mesh_function.rs  mod.rs  pbr_function.rs  pbr_shder.rs  shader_function.rs  shader_type.rs  shader_uniform.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: bind_group.rs  format.rs  lib.rs  renderer.rs  shader.rs  shader_buildin_function.rs
example/: custom_mesh.rs  load_gltf.rs  pbr.rs  triangle.rs
src/: bind_group.rs  camera.rs  color.rs  constant.rs  format.rs  lib.rs  loader.rs  main.rs  math.rs  mesh.rs  primitive.rs  primitives.rs  render.rs  shader.rs  texture.rs  transform.rs
