[package]
name = "re_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]


[dependencies]
renderer = { path = "crates/renderer", version = "0.1.0" }
math = { path = "crates/math", version = "0.1.0" }
bytemuck = { version = "1.13.1", features = ["derive"] }
image = "0.24.7"

[[example]]
name = "triangle"
path = "example/triangle.rs"
