[package]
name = "re_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]


[dependencies]
pipeline = { path = "crates/pipeline", version = "0.1.0" }
math = { path = "crates/math", version = "0.1.0" }
render = { path = 'crates/render', version = "0.1.0" }
loader = { path = "crates/loader", version = "0.1.0" }
bytemuck = { version = "1.13.1", features = ["derive"] }
image = "0.24.6"

[[example]]
name = "triangle"
path = "example/triangle.rs"

[[example]]
name = "custom_mesh"
path = "example/custom_mesh.rs"

[[example]]
name = "load_gltf"
path = "example/load_gltf.rs"

[[example]]
name = "pbr"
path = "example/pbr.rs"

