[package]
name = "loader"
version = "0.1.0"
edition = "2021"


[dependencies]
pipeline = { path = "../pipeline", version = "0.1.0" }
render = { path = "../render", version = "0.1.0" }
math = { path = "../math", version = "0.1.0" }
bytemuck = { version = "1.13.1", features = ["derive"] }
gltf = { version = "1.1.0" }
